# browser_sel_template

./: main.py  pyproject.toml
browser/: __init__.py  manager.py  proxy.py  session.py
browser/extension_handler/: setup.py
browser/extension_handler/metamask/: __init__.py  action_service.py  signin.py
browser/pages/: __init__.py  base_page.py  bot_checker.py  spotlight.py  twitter.py
extensions/MetaMask-Chrome/: background-0.js  background-1.js  background-2.js  background-3.js  background-4.js  background-5.js  background-6.js  background-7.js  common-0.js  common-1.js  common-10.js  common-11.js  common-12.js  common-2.js  common-3.js  common-4.js  common-5.js  common-6.js  common-7.js  common-8.js  common-9.js  manifest.json  offscreen-0.js  ui-0.js  ui-1.js  ui-10.js  ui-11.js  ui-12.js  ui-2.js  ui-3.js  ui-4.js  ui-5.js  ui-6.js  ui-7.js  ui-8.js  ui-9.js
extensions/MetaMask-Chrome/scripts/: sentry-install.js
extensions/WebRTC-Leak-Prevent-Chrome/: manifest.json
